[gd_scene load_steps=5 format=3 uid="uid://ba4ocdhtoiep2"]

[ext_resource type="LabelSettings" uid="uid://dkndw4v4uf4g1" path="res://scenes/ui/label_settings.tres" id="1_0mwgc"]
[ext_resource type="Script" uid="uid://dnbxip1iwniaf" path="res://scenes/ui/hud.gd" id="1_hqnrr"]
[ext_resource type="PackedScene" uid="uid://btt54ku2fob08" path="res://scenes/ui/synthesizer_panel.tscn" id="3_bo48s"]
[ext_resource type="Script" uid="uid://dnlee8k3pyxlw" path="res://scenes/ui/synthesizer_panel.gd" id="4_8qguk"]

[node name="HUD" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_hqnrr")

[node name="ElapsedTimeLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "00:00"
label_settings = ExtResource("1_0mwgc")

[node name="DepthLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Depth 0"
label_settings = ExtResource("1_0mwgc")

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StuffLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Stuff : 0"
label_settings = ExtResource("1_0mwgc")

[node name="ThingiesLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Thingies : 0"
label_settings = ExtResource("1_0mwgc")

[node name="WidgetLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Widgets : 0"
label_settings = ExtResource("1_0mwgc")

[node name="SynthesizerPanel" parent="." instance=ExtResource("3_bo48s")]
layout_mode = 2
script = ExtResource("4_8qguk")
